[package]
name = "media-type-impl-utils"
version = "0.3.0"
authors = ["Philipp Korber <p.korber@1aim.com>"]
license = "MIT/Apache-2.0"
description   = "utils for writing media-type parsers (char lookup table, Quted String Spec, ...)"
readme        = "README.md"
documentation = "https://docs.rs/media-type-impl-utils"
repository    = "https://github.com/1aim/media-type-impl-utils"
keywords      = [ ]

[dependencies]
lut = { git = "https://github.com/1aim/lut" }
quoted-string = { git="https://github.com/1aim/quoted-string" }
percent-encoding = "1.0.0"

[features]
default =  []

[badges]
travis-ci = { repository = "1aim/media-type-impl-utils", branch = "master" }
maintenance = { status = "actively-developed" }


