[package]
name = "media-type-impl-utils"
version = "0.3.0-unstable"
authors = ["Philipp Korber <p.korber@1aim.com>"]
license = "MIT OR Apache-2.0"
description   = "utils for writing media-type parsers (char lookup table, Quted String Spec, ...)"
readme        = "README.md"
documentation = "https://docs.rs/media-type-impl-utils"
repository    = "https://github.com/1aim/media-type-impl-utils"
keywords      = [ ]

[dependencies]
lut = "0.1.0-unstable"
quoted-string = "0.6"
percent-encoding = "1.0.0"

[features]
default =  []

[badges]
travis-ci = { repository = "1aim/media-type-impl-utils", branch = "master" }
maintenance = { status = "actively-developed" }


